# FaceAuth

./: CMakeLists.txt  README.md  cv-helpers.hpp  faceInfoMgr.cpp  filter.hpp  main.cpp  svm.cpp  svm.hpp
